JumpScript/tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/node/jsFileCompilationDifferentNamesNotSpecified.errors.txt
DifferentNamesNotSpecified/jmpconfig.json(2,24): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


==== DifferentNamesNotSpecified/jmpconfig.json (1 errors) ====
    {
      "compilerOptions": { "out": "test.js" }
                           ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
    }
==== DifferentNamesNotSpecified/a.jump (0 errors) ====
    var test = 10;